commit before deploying to stamp